welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:6: error: '<-' expected but ')' found.
  for (i <= 0 to 3){faireV()}
                  ^PictureMono1:7: error: illegal start of simple expression
} 
^