welcome.lessons.welcome.methods.picture.PictureMono1.scala.code
def marquerSol(){baisseBrosse();leveBrosse()}

def faireV(){avance();marquerSol();avance();gauche();avance();marquerSol();recule();droite();avance();marquerSol();avance();avance();gauche();avance()}

override def run() {
  for (i <= 0 to 3){faireV()}
}